generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-08/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::FieldDecl* {anonymous}::SAGenTestChecker::getCountedByField(const clang::FieldDecl*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:96:24: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
   96 |     const Expr *E = A->getCountedBy();
      |                        ^~~~~~~~~~~~
      |                        AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:265:24: error: ‘class clang::ento::SValBuilder’ has no member named ‘getFieldLValue’; did you mean ‘getMinValue’?
  265 |   SVal CountLVal = SVB.getFieldLValue(CountFD, BaseLoc);
      |                        ^~~~~~~~~~~~~~
      |                        getMinValue
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
